--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>Test page</title>
+        <style>
+            
+        </style>
     </head>
     <body>
         <h1>Heading</h1>
